--- a/enterprise-mobility.html
+++ b/enterprise-mobility.html
@@ -2106,137 +2106,152 @@
 
  <!--/////////////////////////// footer section start/////////////////////// -->
 
- <footer>
-    <div class="footer-boxes">
-        <div class="footer-first">
-            <h5>Get in Touch</h5>
-            <ul>
-                <li><a href="tel:+919884565567">Contact No : +919884565567 </a></li>
-                <li><a href="tel:+917538857567">Another Contact No : +917538857567</a></li>
-                <li><a href="mailto:info@iqtechway.com">Email: info@iqtechway.com</a></li>
+   <footer>
+        <div class="footer-boxes">
+            <div class="footer-first">
+                <h5>Get in Touch</h5>
+                <ul>
+                    <li><a href="tel:+919884565567">Contact No : +919884565567 </a></li>
+                    <li><a href="tel:+917538857567">Another Contact No : +917538857567</a></li>
+                    <li><a href="mailto:info@iqtechway.com">Email: info@iqtechway.com</a></li>
 
-            </ul>
+                </ul>
+            </div>
+            <div class="footer-first">
+                <h5>Office Branch</h5>
+                <ul class="branch">
+                    <li>
+                        <h6>Head Branch</h6>
+                        <a href="https://maps.app.goo.gl/g6q1UV33t5EqoUjx5" target="_blank">
+                            204 A, A.K.G.COMPLEX, New Siddhapudur, Tamil Nadu 641044
+                        </a>
+                    </li>
+                    <li>
+                        <h6>BRANCH OFFICE (Madurai) </h6>
+                        <a href="https://maps.app.goo.gl/NXefb1rnyqFT96kE8" target="_blank">
+                            1st floor, Bank of Baroda upstairs, 5, Sakthi Velammal St, Sakthi Velammal Nagar, S S
+                            Colony, Madurai, Tamil Nadu 625010
+                        </a>
+                    </li>
+                    <li>
+                        <h6>BRANCH OFFICE (Coimbatore)</h6>
+                        <a href="https://maps.app.goo.gl/15FyYif4Y6E4Kfxe7" target="_blank">
+                            Ani complex, 185/18, Kamarajar St, Tholampalayam Rd, coimbatore, Tamil Nadu 641104
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+
+            <div class="footer-first">
+                <h5>Follow Us</h5>
+                <div class="footer-social-link">
+                    <a href="https://www.facebook.com/IQTechWay" target="_blank"><i
+                            class="fa-brands fa-facebook fa-xl"></i></a>
+                    <a href="https://www.instagram.com/iqtechway/?utm_source=ig_web_button_share_sheet&igsh=OGQ5ZDc2ODk2ZA%3D%3D"
+                        target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a>
+                    <a href="https://wa.me/+917538857567" target="_blank"><i
+                            class="fa-brands fa-whatsapp fa-xl"></i></a>
+                </div>
+
+            </div>
         </div>
-        <div class="footer-first">
-            <h5>Office Branch</h5>
-            <ul class="branch">
-                <li>
-                    <h6>Head Branch</h6>
-                    <a href="https://maps.app.goo.gl/g6q1UV33t5EqoUjx5" target="_blank">
-                        204 A, A.K.G.COMPLEX, New Siddhapudur, Tamil Nadu 641044
-                    </a>
-                </li>
-                <li>
-                    <h6>BRANCH OFFICE (Madurai) </h6>
-                    <a href="https://maps.app.goo.gl/NXefb1rnyqFT96kE8" target="_blank">
-                        1st floor, Bank of Baroda upstairs, 5, Sakthi Velammal St, Sakthi Velammal Nagar, S S Colony, Madurai, Tamil Nadu 625010
-                    </a>
-                </li>
-                <li>
-                    <h6>BRANCH OFFICE (Coimbatore)</h6>
-                    <a href="https://maps.app.goo.gl/15FyYif4Y6E4Kfxe7" target="_blank">
-                        Ani complex, 185/18, Kamarajar St, Tholampalayam Rd, coimbatore, Tamil Nadu 641104
-                    </a>
-                </li>
+        <div class="footer-boxes">
+            <div class="footer-first">
+                <h5>WEB DEVELOPMENT</h5>
 
-            </ul>
-        </div>
-
-        <div class="footer-first">
-            <h5>Follow Us</h5>
-            <div class="footer-social-link">
-                <a href="https://www.facebook.com/IQTechWay" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a>
-                <a href="https://www.instagram.com/iqtechway/?utm_source=ig_web_button_share_sheet&igsh=OGQ5ZDc2ODk2ZA%3D%3D" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a>
-                <a href="https://wa.me/+917538857567" target="_blank"><i class="fa-brands fa-whatsapp fa-xl"></i></a>
+                <ul>
+                    <li><a href="frontend.html">Frontend</a></li>
+                    <li><a href="php.html"> PHP Backend </a></li>
+                    <li><a href="java.html"> Java </a></li>
+                    <li><a href="nodejs.html"> Node.js </a></li>
+                    <li><a href="dotNet.html"> .Net </a></li>
+                    <li><a href="typeScript.html"> Typescript </a></li>
+                </ul>
+            </div>
+            <div class="footer-first">
+                <h5>CMS Development</h5>
+                <ul>
+                    <li><a href="wordpress.html">Wordpress</a></li>
+                    <li><a href="magento.html">Magento</a></li>
+                    <li><a href="shopify.html">Shopify</a></li>
+                    <li><a href="joomla.html">Joomla</a></li>
+                    <li><a href="drupal.html">Drupal</a></li>
+                    <li><a href="wooCommerce.html">WooCommerce</a></li>
+                    <li><a href="openCart.html">Opencart</a></li>
+                    <li><a href="bigCommerce.html">BigCommerce</a></li>
+                    <li><a href="clickFunnels.html">ClickFunnels</a></li>
+                </ul>
             </div>
 
         </div>
-    </div>
-    <div class="footer-boxes">
-        <div class="footer-first">
-            <h5>INTERNATIONAL SERVICE</h5>
-            <ul>
-                <li><a href="digital-marketing.html">Digital Marketing</a></li>
-                <li><a href="seo-copy-writing.html">SEO Agency</a></li>
-                <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
-                <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
-            </ul>
-        </div>
-        <div class="footer-first">
-            <h5>CMS Development</h5>
-            <ul>
-                <li><a href="wordpress.html">Wordpress</a></li>
-                <li><a href="magento.html">Magento</a></li>
-                <li><a href="shopify.html">Shopify</a></li>
-                <li><a href="joomla.html">Joomla</a></li>
-                <li><a href="drupal.html">Drupal</a></li>
-                <li><a href="wooCommerce.html">WooCommerce</a></li>
-                <li><a href="openCart.html">Opencart</a></li>
-                <li><a href="bigCommerce.html">BigCommerce</a></li>
-                <li><a href="clickFunnels.html">ClickFunnels</a></li>
-            </ul>
-        </div>
-
-    </div>
-    <div class="footer-boxes">
-        <div class="footer-first">
-            <h5>SERVICES</h5>
-            <ul>
-                <li><a href="ui-ux-design.html">UI/UX Design</a></li>
-                <li><a href="android-app.html">Android App</a></li>
-                <li><a href="frontend.html">Frontend Development</a></li>
-                <li><a href="seo.html">SEO Services</a></li>
-                <li><a href="digital-marketing.html">Digital Marketing</a></li>
-                <li><a href="wordpress.html">WordPress Development</a></li>
-            </ul>
-        </div>
-
-        <div class="footer-first">
-            <h5>HIRE DEVELOPERS</h5>
-            <ul>
-                <li><a href="hire-flutter-developer.html">Hire Flutter Developer</a></li>
-                <li><a href="hire-laravel-developer.html">Hire Laravel Developer</a></li>
-                <li><a href="hire-logo-designers.html">Hire Logo Designers</a></li>
-                <li><a href="hire-magento-developer.html">Hire Magento Developer</a></li>
-                <li><a href="hire-php-developer.html">Hire PHP Developer</a></li>
-                <li><a href="hire-seo-expert.html">Hire SEO Experts</a></li>
-                <li><a href="hire-wordpress-developer.html">Hire WordPress Developer</a></li>
-            </ul>
-        </div>
+        <div class="footer-boxes">
+            <div class="footer-first">
+                <h5>ONLINE MARKETING</h5>
 
 
-    </div>
 
-    <div class="footer-boxes">
-        <div class="footer-first">
-            <h5>QUICK LINKS</h5>
-            <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="case-studies.html">Case Studies</a></li>
-                <li><a href="hire.html">Hire</a></li>
-                <li><a href="career.html">Career</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
+                <ul>
+
+                    <li><a href="seo.html"> SEO Services </a></li>
+                    <li><a href="search-engine-marketing.html"> Search Engine Marketing </a></li>
+                    <li><a href="social-media-marketing.html"> Social Media Marketing </a></li>
+                    <li><a href="pay-per-click.html"> Pay Per Click Management </a></li>
+                    <li><a href="seo-copy-writing.html"> SEO Copy Writing </a></li>
+                    <li><a href="digital-marketing.html"> Digital Marketing </a></li>
+                    <li><a href="brand-consulting.html"> Brand Consulting </a></li>
+                    <li><a href="lead-management.html">Lead Management System </a></li>
+                </ul>
+            </div>
+
+            <div class="footer-first">
+                <h5>HIRE DEVELOPERS</h5>
+                <ul>
+                    <li><a href="hire-flutter-developer.html">Hire Flutter Developer</a></li>
+                    <li><a href="hire-laravel-developer.html">Hire Laravel Developer</a></li>
+                    <li><a href="hire-logo-designers.html">Hire Logo Designers</a></li>
+                    <li><a href="hire-magento-developer.html">Hire Magento Developer</a></li>
+                    <li><a href="hire-php-developer.html">Hire PHP Developer</a></li>
+                    <li><a href="hire-seo-expert.html">Hire SEO Experts</a></li>
+                    <li><a href="hire-wordpress-developer.html">Hire WordPress Developer</a></li>
+                </ul>
+            </div>
+
+
         </div>
-        <div class="footer-first">
-            <h5>Mobile App Development</h5>
-            <ul>
-                <li><a href="ios-app.html">iOS App</a></li>
-                <li><a href="android-app.html">Android App</a></li>
-                <li><a href="react-native.html">React Native</a></li>
-                <li><a href="flutter-app.html">Flutter</a></li>
-                <li><a href="cross-mobile-development.html">Cross-Platform</a></li>
-                <li><a href="hybrid-app.html">Hybrid App</a></li>
-            </ul>
-            
+
+        <div class="footer-boxes">
+            <div class="footer-first">
+                <h5>CUSTOM SOFTWARE</h5>
+                <ul>
+                    <li><a href="ai-machine-learning.html"> AI and Machine Learning</a></li>
+                    <li><a href="crm-development.html">CRM Development</a></li>
+                    <li><a href="erp-software.html">ERP Software</a></li>
+                    <li><a href="cloud-app.html">Cloud App</a></li>
+                    <li><a href="product-development.html">Product Development</a></li>
+                    <li><a href="nft-marketplace.html">NFT marketplace </a></li>
+                    <li><a href="web-app.html"> WebApp </a></li>
+                    <li><a href="application-development.html"> Application Development </a></li>
+                </ul>
+            </div>
+            <div class="footer-first">
+                <h5>Mobile App Development</h5>
+                <ul>
+                    <li><a href="ios-app.html">iOS App</a></li>
+                    <li><a href="android-app.html">Android App</a></li>
+                    <li><a href="react-native.html">React Native</a></li>
+                    <li><a href="flutter-app.html">Flutter</a></li>
+                    <li><a href="cross-mobile-development.html">Cross-Platform</a></li>
+                    <li><a href="hybrid-app.html">Hybrid App</a></li>
+                </ul>
+
+            </div>
+
+
         </div>
 
 
-    </div>
-
-
-</footer>
+    </footer>
 <!-- /////////////////footer section end/////////////// -->
 
     <!-- After footer start -->
