--- a/wordpress.html
+++ b/wordpress.html
@@ -896,7 +896,7 @@
 
 
     <!--/////////////////////////// footer section start/////////////////////// -->
-    <footer>
+     <footer>
         <div class="footer-boxes">
             <div class="footer-first">
                 <h5>Get in Touch</h5>
@@ -948,12 +948,15 @@
         </div>
         <div class="footer-boxes">
             <div class="footer-first">
-                <h5>INTERNATIONAL SERVICE</h5>
+                <h5>WEB DEVELOPMENT</h5>
+
                 <ul>
-                    <li><a href="digital-marketing.html">Digital Marketing</a></li>
-                    <li><a href="seo-copy-writing.html">SEO Agency</a></li>
-                    <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
-                    <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
+                    <li><a href="frontend.html">Frontend</a></li>
+                    <li><a href="php.html"> PHP Backend </a></li>
+                    <li><a href="java.html"> Java </a></li>
+                    <li><a href="nodejs.html"> Node.js </a></li>
+                    <li><a href="dotNet.html"> .Net </a></li>
+                    <li><a href="typeScript.html"> Typescript </a></li>
                 </ul>
             </div>
             <div class="footer-first">
@@ -974,14 +977,20 @@
         </div>
         <div class="footer-boxes">
             <div class="footer-first">
-                <h5>SERVICES</h5>
+                <h5>ONLINE MARKETING</h5>
+
+
+
                 <ul>
-                    <li><a href="ui-ux-design.html">UI/UX Design</a></li>
-                    <li><a href="android-app.html">Android App</a></li>
-                    <li><a href="frontend.html">Frontend Development</a></li>
-                    <li><a href="seo.html">SEO Services</a></li>
-                    <li><a href="digital-marketing.html">Digital Marketing</a></li>
-                    <li><a href="wordpress.html">WordPress Development</a></li>
+
+                    <li><a href="seo.html"> SEO Services </a></li>
+                    <li><a href="search-engine-marketing.html"> Search Engine Marketing </a></li>
+                    <li><a href="social-media-marketing.html"> Social Media Marketing </a></li>
+                    <li><a href="pay-per-click.html"> Pay Per Click Management </a></li>
+                    <li><a href="seo-copy-writing.html"> SEO Copy Writing </a></li>
+                    <li><a href="digital-marketing.html"> Digital Marketing </a></li>
+                    <li><a href="brand-consulting.html"> Brand Consulting </a></li>
+                    <li><a href="lead-management.html">Lead Management System </a></li>
                 </ul>
             </div>
 
@@ -1003,14 +1012,16 @@
 
         <div class="footer-boxes">
             <div class="footer-first">
-                <h5>QUICK LINKS</h5>
+                <h5>CUSTOM SOFTWARE</h5>
                 <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="case-studies.html">Case Studies</a></li>
-                    <li><a href="hire.html">Hire</a></li>
-                    <li><a href="career.html">Career</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="ai-machine-learning.html"> AI and Machine Learning</a></li>
+                    <li><a href="crm-development.html">CRM Development</a></li>
+                    <li><a href="erp-software.html">ERP Software</a></li>
+                    <li><a href="cloud-app.html">Cloud App</a></li>
+                    <li><a href="product-development.html">Product Development</a></li>
+                    <li><a href="nft-marketplace.html">NFT marketplace </a></li>
+                    <li><a href="web-app.html"> WebApp </a></li>
+                    <li><a href="application-development.html"> Application Development </a></li>
                 </ul>
             </div>
             <div class="footer-first">
